log
Thu 09 May 2024 03:15:46 PM UTC: 
 treemap.c | 6 ++++--
 1 file changed, 4 insertions(+), 2 deletions(-)
 tests:  1|8
total_score: 0/70
91a0b3f
Thu 09 May 2024 03:17:45 PM UTC: 
 treemap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  1|8
total_score: 0/70
c8647a8
Thu 09 May 2024 03:18:51 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  4|7
total_score: 5/70
0b56ec5
Thu 09 May 2024 03:29:16 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  4|7
total_score: 5/70
7ec620b
Thu 09 May 2024 03:36:11 PM UTC: 
 treemap.c | 13 +++++++++++--
 1 file changed, 11 insertions(+), 2 deletions(-)
 tests:  4|7
total_score: 5/70
62aa9d5
Thu 09 May 2024 03:36:45 PM UTC: 
 treemap.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  4|7
total_score: 5/70
8fba4f3
Thu 09 May 2024 03:37:36 PM UTC: 
 treemap.c | 18 ++++++++++++++++++
 1 file changed, 18 insertions(+)
 tests:  4|7
total_score: 5/70
e89ae04
Thu 09 May 2024 03:45:12 PM UTC: 
 treemap.c | 27 ++-------------------------
 1 file changed, 2 insertions(+), 25 deletions(-)
 tests:  4|7
total_score: 5/70
164b438
Thu 09 May 2024 03:56:28 PM UTC: 
 treemap.c | 18 ++++++++++++++++++
 1 file changed, 18 insertions(+)
 tests:  6|7
total_score: 5/70
7e4da45
Thu 09 May 2024 03:57:31 PM UTC: 
 treemap.c | 13 -------------
 1 file changed, 13 deletions(-)
test.c: In function ‘minimum_test’:
test.c:225:19: error: implicit declaration of function ‘minimum’ [-Werror=implicit-function-declaration]
  225 |     TreeNode* n = minimum(tree->root);
      |                   ^~~~~~~
test.c:225:19: error: initialization of ‘TreeNode *’ from ‘int’ makes pointer from integer without a cast [-Werror=int-conversion]
test.c:239:7: error: assignment to ‘TreeNode *’ from ‘int’ makes pointer from integer without a cast [-Werror=int-conversion]
  239 |     n = minimum(tree->root->left);
      |       ^
test.c:250:7: error: assignment to ‘TreeNode *’ from ‘int’ makes pointer from integer without a cast [-Werror=int-conversion]
  250 |     n = minimum(tree->root);
      |       ^
cc1: all warnings being treated as errors
Compilation failed
0b5a375
Thu 09 May 2024 04:03:55 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
test.c: In function ‘minimum_test’:
test.c:225:19: error: implicit declaration of function ‘minimum’ [-Werror=implicit-function-declaration]
  225 |     TreeNode* n = minimum(tree->root);
      |                   ^~~~~~~
test.c:225:19: error: initialization of ‘TreeNode *’ from ‘int’ makes pointer from integer without a cast [-Werror=int-conversion]
test.c:239:7: error: assignment to ‘TreeNode *’ from ‘int’ makes pointer from integer without a cast [-Werror=int-conversion]
  239 |     n = minimum(tree->root->left);
      |       ^
test.c:250:7: error: assignment to ‘TreeNode *’ from ‘int’ makes pointer from integer without a cast [-Werror=int-conversion]
  250 |     n = minimum(tree->root);
      |       ^
cc1: all warnings being treated as errors
Compilation failed
ffa1e0d
Thu 09 May 2024 04:04:19 PM UTC: 
 treemap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
test.c: In function ‘minimum_test’:
test.c:225:19: error: implicit declaration of function ‘minimum’ [-Werror=implicit-function-declaration]
  225 |     TreeNode* n = minimum(tree->root);
      |                   ^~~~~~~
test.c:225:19: error: initialization of ‘TreeNode *’ from ‘int’ makes pointer from integer without a cast [-Werror=int-conversion]
test.c:239:7: error: assignment to ‘TreeNode *’ from ‘int’ makes pointer from integer without a cast [-Werror=int-conversion]
  239 |     n = minimum(tree->root->left);
      |       ^
test.c:250:7: error: assignment to ‘TreeNode *’ from ‘int’ makes pointer from integer without a cast [-Werror=int-conversion]
  250 |     n = minimum(tree->root);
      |       ^
cc1: all warnings being treated as errors
Compilation failed
1df499b
Thu 09 May 2024 04:04:42 PM UTC: 
 treemap.c | 5 ++---
 1 file changed, 2 insertions(+), 3 deletions(-)
test.c: In function ‘minimum_test’:
test.c:225:19: error: implicit declaration of function ‘minimum’ [-Werror=implicit-function-declaration]
  225 |     TreeNode* n = minimum(tree->root);
      |                   ^~~~~~~
test.c:225:19: error: initialization of ‘TreeNode *’ from ‘int’ makes pointer from integer without a cast [-Werror=int-conversion]
test.c:239:7: error: assignment to ‘TreeNode *’ from ‘int’ makes pointer from integer without a cast [-Werror=int-conversion]
  239 |     n = minimum(tree->root->left);
      |       ^
test.c:250:7: error: assignment to ‘TreeNode *’ from ‘int’ makes pointer from integer without a cast [-Werror=int-conversion]
  250 |     n = minimum(tree->root);
      |       ^
cc1: all warnings being treated as errors
Compilation failed
3be45b8
